# Ayaka

./: .gitignore  README.md  ayaka.pm2config.json  bot.py  config.pyi  ecosystem.config.js  launcher.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql-analysis.yml  lint.yml
5e.tools/class/: class-monk.json  class-sorcerer.json  foundry.json
5e.tools/class/.svn/: wc.db
_pyright/: pyrightconfig.json
cogs/: admin.py  anime.py  ayaka.py  config.py  dictionary.py  dnd.py  emoji.py  feeds.py  fun.py  ipc.py  lewd.py  logging.py  manga.py  meta.py  mod.py  nihongo.py  paste.py  poll.py  reminders.py  rng.py  rtfx.py  snipe.py  stalking.py  stars.py  stats.py  synth.py  tags.py  tiktok.py  time.py  todo.py
cogs/minigames/: __init__.py  battleship.py  gobblet.py
dashboard/: guild.py  token.py  user.py
dashboard/routes/: __init__.py  discord.py  pages.py  pokemon.py
dashboard/templates/: avatarhistory.html  index.html  pokemon.html  sprites.html  voice_recognition.html
dashboard/utils/: handlers.py  http.py
ipc/: __init__.py  client.py  errors.py  server.py
migrations/: V10__new_timezones.sql  V11__cached_star_counts.sql  V12__mod_gatekeeper.sql  V1__Initial_migration.sql  V2__automod_changes.sql  V3__app_command_statistics.sql  V4__mod_lockdown.sql  V5__stalking_cog.sql  V6__daily_questions.sql  V7__todo_commands.sql  V8__remove_connect_four.sql  V9__open_collective_sync.sql
utils/: __init__.py  _types.py  cache.py  checks.py  config.py  context.py  converters.py  currency_codes.json  db.py  dice.py  flags.py  formats.py  fuzzy.py  languages.py  nihongo.py  paginator.py  queue.py  time.py  translator.py  ui.py
utils/_types/: danbooru.py  discord_.py  dnd.py  gelbooru.py  nihongo.py  synth.py
web/: __init__.py  app.py  nginx.conf  oauth.py  template.py
web/routes/: discord.py  index.py  pokemon.py  private.py
web/templates/: avatarhistory.html  index.html  pokemon.html  sprites.html
